--- a/Licznik.ioc
+++ b/Licznik.ioc
@@ -19,38 +19,46 @@ Mcu.IP6=TIM7
 Mcu.IPNb=7
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF0
-Mcu.Pin1=PF6
-Mcu.Pin10=PE12
-Mcu.Pin11=PE13
-Mcu.Pin12=PE14
-Mcu.Pin13=PE15
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PD14
-Mcu.Pin18=PD15
-Mcu.Pin19=PG7
-Mcu.Pin2=PF7
-Mcu.Pin20=PD0
-Mcu.Pin21=PD1
-Mcu.Pin22=PD3
-Mcu.Pin23=PD4
-Mcu.Pin24=PD5
-Mcu.Pin25=PG12
-Mcu.Pin26=PG15
-Mcu.Pin27=VP_SYS_VS_ND
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin3=PC3
-Mcu.Pin30=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin4=PC4
-Mcu.Pin5=PE7
-Mcu.Pin6=PE8
-Mcu.Pin7=PE9
-Mcu.Pin8=PE10
-Mcu.Pin9=PE11
-Mcu.PinsNb=31
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=OSC_IN
+Mcu.Pin11=OSC_OUT
+Mcu.Pin12=PC3
+Mcu.Pin13=PE7
+Mcu.Pin14=PE8
+Mcu.Pin15=PE9
+Mcu.Pin16=PE10
+Mcu.Pin17=PE11
+Mcu.Pin18=PE12
+Mcu.Pin19=PE13
+Mcu.Pin2=PE4
+Mcu.Pin20=PE14
+Mcu.Pin21=PE15
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PD10
+Mcu.Pin25=PD14
+Mcu.Pin26=PD15
+Mcu.Pin27=PG7
+Mcu.Pin28=PD0
+Mcu.Pin29=PD1
+Mcu.Pin3=PE5
+Mcu.Pin30=PD3
+Mcu.Pin31=PD4
+Mcu.Pin32=PD5
+Mcu.Pin33=PG12
+Mcu.Pin34=PG15
+Mcu.Pin35=VP_SYS_VS_ND
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin4=PE6
+Mcu.Pin5=PF0
+Mcu.Pin6=PF1
+Mcu.Pin7=PF2
+Mcu.Pin8=PF3
+Mcu.Pin9=PF6
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -69,21 +77,22 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+OSC_IN.Mode=HSE-External-Oscillator
+OSC_IN.Signal=RCC_OSC_IN
+OSC_OUT.Mode=HSE-External-Oscillator
+OSC_OUT.Signal=RCC_OSC_OUT
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=LM35
 PC3.Locked=true
 PC3.Signal=ADCx_IN13
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=Relay
-PC4.Locked=true
-PC4.Signal=GPIO_Output
 PD0.Signal=FSMC_D2_DA2
 PD1.Signal=FSMC_D3_DA3
 PD10.Signal=FSMC_D15_DA15
 PD14.Signal=FSMC_D0_DA0
 PD15.Signal=FSMC_D1_DA1
-PD3.GPIOParameters=GPIO_Label
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD3.GPIO_Label=JOY_DOWN [MT008-A_DOWN]
+PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.Signal=FSMC_NOE
@@ -96,18 +105,52 @@ PE12.Signal=FSMC_D9_DA9
 PE13.Signal=FSMC_D10_DA10
 PE14.Signal=FSMC_D11_DA11
 PE15.Signal=FSMC_D12_DA12
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=key_w1
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=key_k1
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=key_w2
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE5.GPIO_Label=key_k2
+PE5.GPIO_PuPd=GPIO_PULLUP
+PE5.Locked=true
+PE5.Signal=GPIO_Input
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=key_w3
+PE6.Locked=true
+PE6.Signal=GPIO_Output
 PE7.Signal=FSMC_D4_DA4
 PE8.Signal=FSMC_D5_DA5
 PE9.Signal=FSMC_D6_DA6
 PF0.Signal=FSMC_A0
-PF6.GPIOParameters=GPIO_Label
+PF1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF1.GPIO_Label=key_k3
+PF1.GPIO_PuPd=GPIO_PULLUP
+PF1.Locked=true
+PF1.Signal=GPIO_Input
+PF2.GPIOParameters=GPIO_Label
+PF2.GPIO_Label=key_w4
+PF2.Locked=true
+PF2.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF3.GPIO_Label=key_k4
+PF3.GPIO_PuPd=GPIO_PULLUP
+PF3.Locked=true
+PF3.Signal=GPIO_Input
+PF6.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PF6.GPIO_Label=LED Relay
+PF6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PF6.Locked=true
+PF6.PinState=GPIO_PIN_RESET
 PF6.Signal=GPIO_Output
-PF7.GPIOParameters=GPIO_Label
-PF7.GPIO_Label=LED SEL
-PF7.Locked=true
-PF7.Signal=GPIO_Output
 PG12.Mode=NorPsramChipSelect4_3
 PG12.Signal=FSMC_NE4
 PG15.GPIOParameters=GPIO_Label
@@ -147,28 +190,31 @@ ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM7_Init-TIM7-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true
-RCC.ADCFreqValue=4000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
+RCC.ADCFreqValue=8000000
+RCC.AHBFreq_Value=16000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=4000000
 RCC.APB1TimFreq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.APB2TimFreq_Value=8000000
-RCC.FCLKCortexFreq_Value=8000000
-RCC.FSMCFreq_Value=8000000
+RCC.APB2Freq_Value=16000000
+RCC.APB2TimFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=16000000
+RCC.FSMCFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
-RCC.I2S2Freq_Value=8000000
-RCC.I2S3Freq_Value=8000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=8000000
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=4000000
-RCC.SDIOFreq_Value=8000000
-RCC.SDIOHCLKDiv2FreqValue=4000000
-RCC.SYSCLKFreq_VALUE=8000000
+RCC.HCLKFreq_Value=16000000
+RCC.I2S2Freq_Value=16000000
+RCC.I2S3Freq_Value=16000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=16000000
+RCC.PLLCLKFreq_Value=16000000
+RCC.PLLMCOFreq_Value=8000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SDIOFreq_Value=16000000
+RCC.SDIOHCLKDiv2FreqValue=8000000
+RCC.SYSCLKFreq_VALUE=16000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=8000000
-RCC.USBFreq_Value=8000000
+RCC.TimSysFreq_Value=16000000
+RCC.USBFreq_Value=16000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.ConfNb=1
 SH.FSMC_A0.0=FSMC_A0,A0_3
